# kcp-bulild

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  make_linux64.sh  make_win32.bat  make_win64.bat  编译说明.txt
MacOSBuild/: CMakeCache.txt  cmake_install.cmake
MacOSBuild/CMakeScripts/: ReRunCMake.make
MacOSBuild/Debug/kcp.bundle/Contents/MacOS/: kcp
MacOSBuild/MinSizeRel/kcp.bundle/Contents/: Info.plist
MacOSBuild/MinSizeRel/kcp.bundle/Contents/MacOS/: kcp
MacOSBuild/RelWithDebInfo/kcp.bundle/Contents/MacOS/: kcp
MacOSBuild/Release/kcp.bundle/Contents/MacOS/: kcp
MacOSBuild/kcp.build/Debug/kcp.build/Objects-normal/x86_64/: kcp.LinkFileList  kcp.d
MacOSBuild/kcp.build/MinSizeRel/kcp.build/Objects-normal/x86_64/: kcp.LinkFileList
MacOSBuild/kcp.build/RelWithDebInfo/ZERO_CHECK.build/: Script-77C8AC94E6D1466BB166D6FF.sh
MacOSBuild/kcp.build/RelWithDebInfo/kcp.build/Objects-normal/x86_64/: kcp.LinkFileList
MacOSBuild/kcp.build/Release/kcp.build/Objects-normal/x86_64/: kcp.LinkFileList
MacOSBuild/kcp.xcodeproj/: project.pbxproj
MacOSBuild/kcp.xcodeproj/project.xcworkspace/xcuserdata/zhangyinan.xcuserdatad/: UserInterfaceState.xcuserstate
MacOSBuild/kcp.xcodeproj/xcshareddata/xcschemes/: kcp.xcscheme
MacOSBuild/kcp.xcodeproj/xcuserdata/zhangyinan.xcuserdatad/xcschemes/: xcschememanagement.plist
Unity/: kcp.cs
jni/: ikcp.h  kcp.c
manual_build_ios/kcp/: ikcp.h  kcp.c
manual_build_ios/kcp.xcodeproj/: project.pbxproj
